@@ -17,7 +17,7 @@
  * along with bb-ant-tools; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
-package ca.slashdev.bb;
+package ca.slashdev.bb.tasks;
 
 import java.io.File;
 import java.util.Vector;
@@ -34,6 +34,8 @@ import org.apache.tools.ant.BuildException;
 import org.w3c.dom.DOMImplementation;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import ca.slashdev.bb.types.ApplicationType;
 
 /**
  * @author josh
